--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,14 +19,16 @@
 
 </head>
 
-    <body style="min-height: 100vh; display: flex; flex-direction: column;">
+<body style="min-height: 100vh; display: flex; flex-direction: column;">
 
-        {% include 'includes/navbar.html' %}
-        {% include 'includes/messages.html' %}
-        {% block body_content %}{% endblock %}
-        {% block body_js_script %}{% endblock %}
-        {% include "includes/footer.html" %}
+{% include 'includes/navbar.html' %}
+{% include 'includes/messages.html' %}
+<div class="container my-5">
+    {% block body_content %}{% endblock %}
+</div>
+{% block body_js_script %}{% endblock %}
+{% include "includes/footer.html" %}
 
-    </body>
+</body>
 
 </html>
