--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange">
+<nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative">
     <div class="container-fluid" style="background-color: orange">
         <a class="navbar-brand" href="#">Dashboard Racks</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
