--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -35,6 +35,9 @@
                             <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                     {% endif %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'user-register' %}">Register</a>
+                    </li>
                     </li>
                 </ul>
                 <form class="d-flex mt-3" role="search">
