Create and Detail view for Racks working

--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,10 +1,18 @@
 <nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative">
     <div class="container-fluid" style="background-color: orange">
         <a class="navbar-brand" href="/home/">Dashboard Racks</a>
+
+        <form class="d-flex mt-3" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
         </button>
+
+
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
@@ -15,6 +23,13 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
                     </li>
+
+                    <hr>
+
+                    <li class="navbar-text">
+                        <i class="fa fa-user-circle" aria-hidden="true"></i> <b>Account</b>
+                    </li>
+
                     {% if user.is_authenticated %}
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             User ({{ user.username }})
@@ -36,12 +51,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'user-register' %}">Register</a>
                     </li>
+
+                    <hr>
+
+                    <li class="navbar-text">
+                        <i class="fa fa-user-circle" aria-hidden="true"></i> <b>Racks</b>
                     </li>
+
                 </ul>
-                <form class="d-flex mt-3" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
             </div>
         </div>
     </div>
