--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,5 +4,22 @@
 {% block head_title %}Dashboard{% endblock %}
 
 {% block body_content %}
-    This is the index page.
+
+    <div class="container text-center">
+        <div class="row g-2">
+            <div class="col-3">
+                <div class="p-3 border bg-light shadow-sm"><a href="{% url 'rack-list' %}">Racks</a></div>
+            </div>
+            <div class="col-3">
+                <div class="p-3 border bg-light shadow-sm">tbd</div>
+            </div>
+            <div class="col-3">
+                <div class="p-3 border bg-light shadow-sm">tbd</div>
+            </div>
+            <div class="col-3">
+                <div class="p-3 border bg-light shadow-sm">tbd</div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
