--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,9 +1,10 @@
 <nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative">
     <div class="container-fluid" style="background-color: orange">
-        <a class="navbar-brand" href="/home/">Dashboard Racks</a>
 
-        <form class="d-flex mt-3" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <a class="navbar-brand" href="/home/">Home</a>
+
+        <form class="d-inline-flex" role="search">
+            <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
 
