add a chart to rack detail_view.html

--- a/app/templates/app/rack_create_form.html
+++ b/app/templates/app/rack_create_form.html
@@ -1,2 +1,8 @@
 {#Create Rack form#}
-{% include 'includes/create_form.html' with form=form title='Rack' %}
+{% extends "wrapper/create_view.html" %}
+
+{% block standard_create_headline %}
+    <p class="display-4">{% if object %}Update{% else %}Create{% endif %} Rack</p>
+
+    <p class="lead">{% if object %}Update {{ object }}{% else %}Create a new Rack.{% endif %}</p>
+{% endblock %}
