--- a/app/templates/app/rack_detail.html
+++ b/app/templates/app/rack_detail.html
@@ -1,7 +1,92 @@
-{% extends "wrapper/standard_detail_view.html" %}
+{% extends "wrapper/detail_view.html" %}
 
 {% block standard_detail_head_title %}{{ object.name }} | Details {% endblock %}
 
 {% block standard_detail_content %}
-    <p class="lead">{{ object }}</p>
+    <p class="display-6">Details of the rack {{ object }} </p>
+
+    <div class="row">
+        <div class="col-md-4 offset-md-0 mt-4">
+
+            <p class="lead m-0">Number of remote reports:</p>
+            <p class="lead m-0">Failed reports:</p>
+
+        </div>
+
+        <div class="col-md-1 offset-md-0 mt-4">
+
+            <p class="lead m-0">{{ ReportCollection | length }}</p>
+            <p class="lead m-0">{{ remote_reports_failed }}</p>
+
+        </div>
+
+
+            <div id="piechart" class="m-0"></div>
+
+
+    </div>
+
+{#    <a href="{% url 'your_form_view' %}?next={{ request.path|urlencode }}">Go to my form!</a>#}
+
+    <a href="{% url 'rack-download-report' rack_pk=object.pk %}?next={{ request.path|urlencode }}" class="btn btn-dark my-2">Download all</a>
+
+
+    <script type="text/javascript">
+        // Load google charts
+        google.charts.load('current', {'packages': ['corechart']});
+        google.charts.setOnLoadCallback(drawChart);
+
+        // Draw the chart and set the chart values
+        function drawChart() {
+            var data = google.visualization.arrayToDataTable([
+                ['Result', 'Number'],
+                ['Failed', {{ remote_reports_failed }}],
+                ['Passed', 3],
+
+            ]);
+
+            // Optional; add a title and set the width and height of the chart
+            var options = {
+                'title': 'Results of remote reports',
+                'width': 550,
+                'height': 400,
+                'colors': ['#fc0303', '#1cfc03']
+            };
+
+            // Display the chart inside the <div> element with id="piechart"
+            var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+
+            chart.draw(data, options);
+        }
+    </script>
+
+
+    {#    {% if ReportCollection %}#}
+    {#        {% for report in ReportCollection %}#}
+    {##}
+    {#            <div class="row">#}
+    {#                <div class="col-md-4 offset-md-0  bg-light m-2">#}
+    {#                    <div class="col ">#}
+    {#                        <p><a class="link-{{ report.tag }}" href="{% url 'rack-download-report' rack_pk=object.pk %}">{{ report.name }}</a></p>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {##}
+    {#                <div class="col-md-2 offset-md-1  bg-light m-2">#}
+    {#                    <div class="col ">#}
+    {#                        <p><a class="link-{{ report.tag }}" href="{% url 'rack-download-report' rack_pk=object.pk %}">{{ report.name }}</a></p>#}
+    {#                    </div>#}
+    {#                </div>#}
+    {#            </div>#}
+    {##}
+    {##}
+    {##}
+    {#        {% endfor %}#}
+    {##}
+    {#    {% endif %}#}
+    {##}
+    {#    {% for report in reports %}#}
+    {#        <p><a href="#">{{ report }}</a></p>#}
+    {#    {% endfor %}#}
+
+
 {% endblock %}
