--- a/app/templates/app/rack_update_form.html
+++ b/app/templates/app/rack_update_form.html
@@ -1,2 +1,59 @@
+{% extends "base.html" %}
 
-{% include "app/rack_create_form.html" %}
+{% block head_title %}{{ object.name }} | Details{% endblock %}
+
+{% block body_content %}
+
+    <div class="col-md-6 offset-md-3 shadow-lg p-4">
+
+        <p class="display-4">{{ object.name }}</p>
+
+        <p class="lead">Details of the rack {{ object }}. </p>
+
+        <nav>
+            <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true">Config Rack</button>
+                <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">SSH Config</button>
+                <button class="nav-link" id="nav-contact-tab" data-bs-toggle="tab" data-bs-target="#nav-contact" type="button" role="tab" aria-controls="nav-contact" aria-selected="false">Report Config</button>
+            </div>
+        </nav>
+
+        <div class="tab-content my-2" id="nav-tabContent">
+            <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+
+                <div class="container p-2">
+                    <div class="col-auto">
+                        {% include 'includes/form_label_input_inline.html' with form=rack_config_form title='Rack Config' object=object %}
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="tab-pane fade" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab" tabindex="0">
+
+                <div class="container p-2">
+                    <div class="col-auto">
+                        {% include 'includes/form_label_input_inline.html' with form=report_config_form title='Report Config' object=object.report_config %}
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">
+
+                <div class="container p-2">
+                    <div class="col-auto">
+                        {% include 'includes/form_label_input_inline.html' with form=ssh_config_form title='SSH Config' object=object.ssh_config %}
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+
+    </div>
+{% endblock %}
+
+
+
