--- a/app/templates/includes/create_form.html
+++ b/app/templates/includes/create_form.html
@@ -1,26 +1,12 @@
-{% extends "wrapper/standard_create_view.html" %}
+{% extends "wrapper/create_view.html" %}
 
 {% block standard_create_head_title %} {{ title }} | {% if object %}Update{% else %}Create{% endif %}{% endblock %}
 
-{% block standard_create_content %}
+{% block standard_create_headline %}
 
     <p class="display-4">{% if object %}Update{% else %}Create{% endif %} {{ title }}</p>
 
     <p class="lead">{% if object %}Update {{ object }}{% else %}Create a new  {{ title }}.{% endif %}</p>
 
-    <form method="post" class="form-floating">{% csrf_token %}
-
-        {% for field in form %}
-            <div class="form-floating mb-3">
-                {{ field.errors }}
-                {{ field }} {{ field.label_tag }}
-                {% if field.help_text %}
-                    <p class="help">{{ field.help_text|safe }}</p>
-                {% endif %}
-            </div>
-        {% endfor %}
-
-        <input type="submit" value="Create" class="btn btn-dark">
-    </form>
 
 {% endblock %}
