--- a/app/templates/wrapper/confim_delete.html
+++ b/app/templates/wrapper/confim_delete.html
@@ -1,14 +1,19 @@
 {% extends "base.html" %}
 
 {% block head_title %}
-    {% block confirm_delete_head_title %}  {% endblock %}
+    {{ object.name }} | Delete
 {% endblock %}
 
-
 {% block body_content %}
-    <div class="col-md-8 offset-md-2 shadow-lg p-4">
+    <div class="col-md-6 offset-md-3 shadow-lg p-4">
 
-        {% block  confirm_delete_content %}{% endblock %}
+        <p class="display-4">Confirm delete</p>
+
+        <form method="post">{% csrf_token %}
+            <p class="lead">Are you sure you want to delete "{{ object }}"?</p>
+            {{ form }}
+            <input type="submit" value="Confirm" class="btn btn-dark">
+        </form>
 
     </div>
 {% endblock %}
