--- a/app/templates/wrapper/create_view.html
+++ b/app/templates/wrapper/create_view.html
@@ -7,7 +7,11 @@
 {% block body_content %}
     <div class="col-md-6 offset-md-3 shadow-lg p-4 mt-2">
 
-        {% block standard_create_content %}{% endblock %}
+        {% block standard_create_headline %}
+
+        {% endblock %}
+
+        {% include 'includes/form_label_input_inline.html' with form=form %}
 
     </div>
 {% endblock %}
