--- a/app/templates/wrapper/detail_view.html
+++ b/app/templates/wrapper/detail_view.html
@@ -1,14 +1,13 @@
 {% extends "base.html" %}
 
 {% block head_title %}
-    {% block standard_delete_head_title %}  {% endblock %}
+    {% block standard_detail_head_title %}  {% endblock %}
 {% endblock %}
-
 
 {% block body_content %}
     <div class="col-md-8 offset-md-2 shadow-lg p-4">
 
-        {% block standard_delete_content %}{% endblock %}
+        {% block standard_detail_content %}{% endblock %}
 
     </div>
 {% endblock %}
