--- a/app/templates/wrapper/list_view.html
+++ b/app/templates/wrapper/list_view.html
@@ -6,7 +6,7 @@
 
 
 {% block body_content %}
-    <div class="col-md-8 offset-md-2 shadow-lg p-4">
+    <div class="col-md-8 offset-md-2 shadow-lg p-4 mt-4">
 
         {% block standard_list_content %}{% endblock %}
 
