--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,9 +7,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    {% include 'includes/head_style.html' %}
     {% include 'includes/head_links.html' %}
     {% include 'includes/head_scripts.html' %}
-    {% include 'includes/head_style.html' %}
+
 
     {% block head_script %}{% endblock %}
     {% block head_link %}{% endblock %}
@@ -27,9 +28,14 @@
 
 {% block body_content %}{% endblock %}
 
-{% block body_js_script %}{% endblock %}
+
 {% include "includes/footer.html" %}
 
+{% include "includes/javascript.html" %}
+
+{% block body_js_script %}
+
+{% endblock %}
 </body>
 
 </html>
