--- a/app/templates/app/rack_list.html
+++ b/app/templates/app/rack_list.html
@@ -20,15 +20,13 @@
 
                     {% for rack in object_list %}
 
-                        <div class="hstack gap-3 shadow-sm bg-light p-2">
+                        <div class="hstack gap-3 shadow-sm bg-light p-2 border border-light rounded">
 
 
                             <input class="form-control me-auto" type="text" readonly placeholder="{{ rack.name }}">
 
                             <a href="{% url 'rack-detail' pk=rack.pk %}"><i class="fa-sharp fa-solid fa-chart-line text-dark"></i></a>
-                            {#                            <div class="vr"></div>#}
                             <a href="{% url 'rack-update' pk=rack.pk %}"><i class="fa-sharp fa-solid fa-pen text-primary"></i></a>
-                            {#                            <div class="vr"></div>#}
                             <a href="{% url 'rack-delete' pk=rack.pk %}"><i class="fa-sharp fa-solid fa-trash text-danger"></i></a>
                         </div>
 
