--- a/app/templates/includes/messages.html
+++ b/app/templates/includes/messages.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-auto mt-2">
+        <div class="align-self-center mt-2 text-center">
 
             {% if messages %}
 
