--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,7 +1,7 @@
-<nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative">
+<nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative; color: whitesmoke">
     <div class="container-fluid" style="background-color: orange">
 
-        <a class="navbar-brand" href="/home/">Home</a>
+        <a class="navbar-brand fw-bolder text-secondary " href="/home/"><b></b>u-test | u-remote dashboard</a>
 
         <form class="d-inline-flex" role="search">
             <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">
@@ -16,13 +16,13 @@
 
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                <h5 class="offcanvas-title text-dark" id="offcanvasNavbarLabel">u-test | dashboard</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'index' %}"><b>Home</b></a>
                     </li>
 
                     <hr>
