validated private key connection

--- a/app/templates/includes/form_label_input_inline.html
+++ b/app/templates/includes/form_label_input_inline.html
@@ -4,7 +4,7 @@
     <p class="display-6">{{ title }}</p>
 {% endif %}
 
-<form method="post" class="form-floating">{% csrf_token %}
+<form method="post" class="form-floating" enctype="multipart/form-data">{% csrf_token %}
 
     {% for field in form %}
         <div class="row mb-3">
