--- a/app/templates/includes/head_style.html
+++ b/app/templates/includes/head_style.html
@@ -11,5 +11,39 @@
         box-sizing: inherit;
     }
 
+    .btn-outline-orange {
+        --bs-btn-color: orange;
+        --bs-btn-border-color: orange;
+        --bs-btn-hover-color: #fff;
+        --bs-btn-hover-bg: orange;
+        --bs-btn-hover-border-color: orange;
+        --bs-btn-focus-shadow-rgb: 33, 37, 41;
+        --bs-btn-active-color: #fff;
+        --bs-btn-active-bg: orange;
+        --bs-btn-active-border-color: orange;
+        --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+        --bs-btn-disabled-color: orange;
+        --bs-btn-disabled-bg: transparent;
+        --bs-btn-disabled-border-color: orange;
+        --bs-gradient: none;
+    }
+
+    .btn-orange {
+        background: orange !important;
+        --bs-btn-color: #fff;
+        --bs-btn-bg: orange;
+        --bs-btn-border-color: orange;
+        --bs-btn-hover-color: white;
+        --bs-btn-hover-bg: blue;
+        --bs-btn-hover-border-color: red;
+        --bs-btn-focus-shadow-rgb: black;
+        --bs-btn-active-color: orange;
+        --bs-btn-active-bg: gray;
+        --bs-btn-active-border-color: darkorange;
+        --bs-btn-active-shadow: inset 0 3px 5px rgba(255, 165, 0, 0.125);
+        --bs-btn-disabled-color: orange;
+        --bs-btn-disabled-bg: gray;
+        --bs-btn-disabled-border-color: orange;
+    }
 
 </style>
