--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-ligt fixed-top shadow-sm" style="background-color: orange; position: relative; color: whitesmoke">
     <div class="container-fluid" style="background-color: orange">
 
-        <a class="navbar-brand fw-bolder text-secondary " href="/home/"><b></b>u-test | u-remote dashboard</a>
+        <a class="navbar-brand fw-bolder text-dark " href="/home/"><b></b>u-test | u-remote dashboard</a>
 
         <form class="d-inline-flex" role="search">
             <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">
