--- a/app/templates/app/rack_detail.html
+++ b/app/templates/app/rack_detail.html
@@ -4,65 +4,91 @@
 
 {% block body_content %}
 
-    <div class="col-md-8 offset-md-2 shadow p-4 my-4">
-        <p class="display-6">Remote report directory of {{ object }} </p>
+    <div class="text-center">
+        <p class="display-6 fw-bold">Rack: {{ object }}</p>
+        <p class="lead">Overview over the available remote reports and archive.</p>
+    </div>
+
+    <div class="container-xxl border rounded shadow my-4" style="min-height: 200px">
+        <p class="lead fw-bold mb-0 p-2">Remote Reports </p>
+        <hr class="my-0">
         {% if reports %}
-
-            <div class="col-md-auto offset-md-0 mt-0">
-
-                <p class="lead">Overview of the current report results on the remote device {{ object.name }} ({{ object.ssh_config.hostname }}).
-
-                <p class="">
-                    <a href="{% url 'rack-download-report' rack_pk=object.pk %}?next={{ request.path|urlencode }}"
-                       class="my-0 btn btn-dark w-100"
-                       data-bs-toggle="tooltip"
-                       data-bs-placement="top"
-                       data-bs-title="Download all reports of the remote device {{ object }}.">
-                        <i class="fa fa-download" aria-hidden="true"></i> Download all reports
-                    </a>
-                </p>
+            <div class="row">
+                <div class="col-6 lead p-4">
+                    <div class="row">
+                        <div class="col">Hostname</div>
+                        <div class="col">{{ rack.ssh_config.hostname }}</div>
+                    </div>
+                    <div class="row">
+                        <div class="col">Remote report path</div>
+                        <div class="col">{{ rack.report_config.remote_report_path }}</div>
+                    </div>
+                </div>
 
             </div>
 
             {% include 'includes/report_pie_chart.html' with n_absolute=remote_report_collection|length n_failed=remote_reports_failed n_passed=remote_reports_passed title='RemoteReports' %}
+            {% include 'includes/progress_bar.html' with title='MyProgressbar' result_url=request.path|urlencode %}
 
+            <hr>
+
+            <div class="d-flex justify-content-end my-2">
+
+                <a class="btn btn-dark mx-2"
+                   href="{% url 'rack-update' pk=rack.pk %}"><i class="fa-sharp fa-solid fa-pen"></i>
+                    Edit</a>
+
+                <form class="mx-2" method="get">
+                    {% csrf_token %}
+                    <input type="hidden" name="_pull_reports" value="1">
+                    <button class="btn btn-outline-dark"
+                            type="submit">
+                        <i class="fa fa-download" aria-hidden="true"></i> To archive
+                    </button>
+                </form>
+            </div>
 
         {% else %}
-            <p class="lead">No reports available on {{ rack.name }} ({{ rack.ssh_config.hostname }}).</p>
+            <div class="text-center p-4">
+                <p class="lead alert alert-secondary">No reports available on {{ rack.ssh_config.hostname }} (rack of {{ rack.name }}).</p>
+            </div>
+
         {% endif %}
 
-        <a href="{% url 'rack-update' pk=rack.pk %}" class="btn btn-dark"><i class="fa-sharp fa-solid fa-pen"></i> Edit</a>
     </div>
 
 
-    <div class="col-md-8 offset-md-2 shadow p-4 my-4">
-        <div class="row">
-            <p class="display-6">Archive {{ object }} </p>
 
-            {% if object.archive.reports %}
+    <div class="container-xxl border rounded shadow my-4" style="min-height: 200px">
 
-                <div class="col-md-auto offset-md-0 mt-0">
+        {#            <p class="display-6">Archive {{ object }} </p>#}
+        <p class="lead fw-bold mb-0 p-2">Archive of {{ object }}</p>
+        <hr class="my-0">
 
-                    <p class="lead">Overview of the archive of the rack {{ object.name }}.</p>
+        {% if object.archive.reports %}
 
-                </div>
+            <div class="col-md-auto offset-md-0 mt-0">
+                <p class="lead">Overview of the archive of the rack {{ object.name }}.</p>
+            </div>
 
+            {% include 'includes/report_pie_chart.html' with n_absolute=rack.archive.reports.all|length n_failed=rack.archive.get_number_of_failed n_passed=rack.archive.get_number_of_passed title='ArchiveReports' %}
+
+            <hr>
+
+            <div class="d-flex justify-content-end my-2">
                 <a href="{% url 'rack-report-list-filtered' rack_pk=object.pk %}"
-                   class="btn btn-dark w-100"
+                   class="btn btn-dark"
                    data-bs-toggle="tooltip"
                    data-bs-placement="top"
                    data-bs-title="List of all reports in the archive {{ rack.archive }}.">
-
                     <i class="fa fa-list" aria-hidden="true"></i> Reports
-
                 </a>
+            </div>
 
-                {% include 'includes/report_pie_chart.html' with n_absolute=rack.archive.reports.all|length n_failed=rack.archive.get_number_of_failed n_passed=rack.archive.get_number_of_passed title='ArchiveReports' %}
+        {% else %}
+            <p class="lead">No reports available in archive of {{ rack.name }}.</p>
+        {% endif %}
 
-            {% else %}
-                <p class="lead">No reports available in archive of {{ rack.name }}.</p>
-            {% endif %}
-        </div>
     </div>
 
 {% endblock %}
