--- a/app/templates/includes/head_links.html
+++ b/app/templates/includes/head_links.html
@@ -1,7 +1,9 @@
 {#locals#}
 {% load static %}
-{#<link rel="stylesheet" href="{% static 'styles/css/bootstrap.css' %}">#}
-
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+{#<link rel="stylesheet" type="text/css" href="{% static 'bootstrap/css/bootstrap.css' %}">#}
+<link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+{##}
+{#<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"#}
+{#      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">#}
 
