--- a/app/templates/includes/report_pie_chart.html
+++ b/app/templates/includes/report_pie_chart.html
@@ -1,12 +1,12 @@
 <div class="row">
 
-    <div class="col-sm-auto offset-md-0 mt-0">
+    <div class="col-sm-auto offset-md-0 my-0">
         <div id="donutchart_{{ title }}" class="m-0"></div>
     </div>
 
     <div class="col-md-4 offset-md-0 mt-4">
 
-        <p class="lead m-0">Absolute number of reports:</p>
+        <p class="lead m-0">All reports:</p>
         <p class="lead m-0">Failed reports:</p>
         <p class="lead m-0">Passed reports:</p>
 
@@ -33,14 +33,20 @@
         ]);
 
         var options = {
-            'title': 'Results of {{title}}',
-            'width': 550,
-            'height': 400,
+            {#'title': 'Results',#}
+            'width': 300,
+            'height': 250,
             'colors': ['#fc0303', '#1cfc03'],
-            pieHole: 0.4,
+            chartArea:{left:0,top:20,width:'100%',height:'75%'},
+            pieHole: 0.2,
+            legend: {position: 'bottom', textStyle: {color: 'black', fontSize: 16}},
+            fontSize : 16,
+            pieSliceText: 'none'
         };
 
         var chart = new google.visualization.PieChart(document.getElementById('donutchart_{{ title }}'));
+
         chart.draw(data, options);
     }
 </script>
+
