--- a/app/templates/wrapper/list_view.html
+++ b/app/templates/wrapper/list_view.html
@@ -6,7 +6,8 @@
 
 
 {% block body_content %}
-    <div class="col-md-8 offset-md-2 shadow-lg p-4 mt-4">
+{#    <div class="col-md-10 offset-md-1 shadow-lg mt-4">#}
+    <div class="mt-4">
 
         {% block standard_list_content %}{% endblock %}
 
