--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -3,10 +3,10 @@
 
         <a class="navbar-brand fw-bolder text-dark " href="/home/"><b></b>u-test | u-remote dashboard</a>
 
-        <form class="d-inline-flex" role="search">
-            <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
+{#        <form class="d-inline-flex" role="search">#}
+{#            <input class="form-control me-2 w-75" type="search" placeholder="Search" aria-label="Search">#}
+{#            <button class="btn btn-outline-success" type="submit">Search</button>#}
+{#        </form>#}
 
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
